# wukong

./: .gitignore  README.md
demo/: gameData.json  serverGroup.json
demo/client/: CMakeLists.txt
demo/client/src/: main.cpp
demo/client1/: CMakeLists.txt
demo/client1/src/: main.cpp
demo/front/: CMakeLists.txt  front_config.json
demo/front/src/: main.cpp
demo/gateway/: CMakeLists.txt  gateway_config.json
demo/gateway/src/: main.cpp
demo/generate/: demo_db_utils.cpp  demo_db_utils.h  demo_game_object.cpp  demo_game_object.h  demo_lobby_object.cpp  demo_lobby_object.h  demo_lobby_object_data.cpp  demo_lobby_object_data.h  demo_record_object.cpp  demo_record_object.h  demo_record_object_data.cpp  demo_record_object_data.h  demo_role_builder.cpp  demo_role_builder.h  demo_utils.cpp  demo_utils.h
demo/hotfix/fixEcho/: CMakeLists.txt
demo/hotfix/fixEcho/lua/: fix_1000.lua
demo/hotfix/fixEcho/src/: fix_echo.cpp
demo/lobby/: CMakeLists.txt  lobby_config.json
demo/lobby/src/: lobby_game_object.cpp  lobby_game_object.h  main.cpp  message_handler.cpp  message_handler.h  (+2 more)
demo/login/: CMakeLists.txt  login_config.json
demo/login/src/: main.cpp
demo/nexus/: CMakeLists.txt  nexus_config.json
demo/opctrl/: CMakeLists.txt
demo/opctrl/src/: handler_mgr.cpp  handler_mgr.h  main.cpp
demo/proto/: demo.pb.cc  demo.pb.h  demoGame.pb.cc  demoGame.pb.h  demoGame.proto
demo/record/: CMakeLists.txt  record_config.json
demo/scene/: CMakeLists.txt  scene_config.json
demo/share/: demo_const.h  demo_errdef.h
front/: CMakeLists.txt  front_config.json.template
front/src/: front_config.cpp  front_config.h  front_server.cpp  front_server.h
gateway/: CMakeLists.txt  gateway_config.json  gateway_config.json.template
gateway/src/: gateway_center.cpp  gateway_center.h  gateway_config.cpp  gateway_config.h  gateway_handler.cpp  gateway_handler.h  gateway_manager.cpp  gateway_manager.h  gateway_object.cpp  gateway_object.h  gateway_object_manager.cpp  gateway_object_manager.h  gateway_server.cpp  gateway_server.h  gateway_service.cpp  gateway_service.h  main.cpp  route_object.cpp  route_object.h
lobby/: CMakeLists.txt  lobby_config.json  lobby_config.json.template  log_config.json
lobby/src/: lobby_config.cpp  lobby_config.h  lobby_delegate.h  lobby_object.cpp  lobby_object.h  lobby_object_data.h  lobby_object_manager.cpp  lobby_object_manager.h  lobby_server.cpp  lobby_server.h  lobby_service.cpp  lobby_service.h  main.cpp  message_handler.cpp  message_handler.h
login/: CMakeLists.txt  README  login_config.json  login_config.json.template
login/src/: login_config.cpp  login_config.h  login_delegate.h  login_handler_mgr.cpp  login_handler_mgr.h  login_server.cpp  login_server.h  main.cpp
nexus/: CMakeLists.txt  nexus_config.json.template
nexus/src/: main.cpp  nexus_config.cpp  nexus_config.h  nexus_handler.cpp  nexus_handler.h  nexus_server.cpp  nexus_server.h  server_manager.cpp  server_manager.h  server_object.h
opctrl/: CMakeLists.txt  opctrl_config.json.template
opctrl/src/: opctrl_config.cpp  opctrl_config.h  opctrl_server.cpp  opctrl_server.h
proto/: common.pb.cc  common.pb.h  common.proto  inner_common.pb.cc  inner_common.pb.h  inner_common.proto
proto/game/: game.pb.cc  game.pb.h  game.proto
proto/service/: game_service.pb.cc  game_service.pb.h  game_service.proto  gateway_service.pb.cc  gateway_service.pb.h  gateway_service.proto  lobby_service.pb.cc  lobby_service.pb.h  lobby_service.proto  record_service.pb.cc  record_service.pb.h  record_service.proto  scene_service.pb.cc  scene_service.pb.h  scene_service.proto  service_common.pb.cc  service_common.pb.h  service_common.proto
record/: CMakeLists.txt  record_config.json  record_config.json.template
record/src/: main.cpp  record_center.cpp  record_center.h  record_config.cpp  record_config.h  record_delegate.h  record_manager.cpp  record_manager.h  record_object.cpp  record_object.h  record_object_data.h  record_object_manager.cpp  record_object_manager.h  record_server.cpp  record_server.h  record_service.cpp  record_service.h
scene/: scene_config.json.template
scene/src/: scene.cpp  scene.h  scene_config.cpp  scene_config.h  scene_delegate.h  scene_manager.cpp  scene_manager.h  scene_server.cpp  scene_server.h  scene_service.cpp  scene_service.h
share/: const.h  define.h  errcode.h
share/agent/: agent.cpp  agent.h  agent_manager.cpp  agent_manager.h  gateway_agent.cpp  gateway_agent.h  lobby_agent.cpp  lobby_agent.h  record_agent.cpp  record_agent.h  scene_agent.cpp  scene_agent.h
share/client/: client_center.cpp  client_center.h  game_client.cpp  game_client.h  gateway_client.cpp  gateway_client.h  lobby_client.cpp  lobby_client.h  record_client.cpp  record_client.h  scene_client.cpp  scene_client.h  zk_client.cpp  zk_client.h
share/db/: cache_pool.cpp  cache_pool.h  mysql_pool.cpp  mysql_pool.h  redis_pool.cpp  redis_pool.h
share/event/: event.cpp  event.h  global_event.cpp  global_event.h
share/game/: game_center.cpp  game_center.h  game_delegate.h  game_object.cpp  game_object.h  game_object_manager.cpp  game_object_manager.h  game_service.cpp  game_service.h
share/http/: http_client.cpp  http_client.h  http_message.cpp  http_message.h  http_parser.cpp  http_parser.h  http_server.cpp  http_server.h
share/lock/: distribute_lock.cpp  distribute_lock.h
share/log/: log_config.json.template  logger.cpp  logger.h
share/lua/: lua_center.cpp  lua_center.h
share/msghdl/: message_handle_manager.cpp  message_handle_manager.h  message_hotfix_manager.cpp  message_hotfix_manager.h  message_target.cpp  message_target.h
sql/: record.sql
tools/gameDataCodeGen/: genGameObject.go  genLobbyObject.go  genLobbyObjectData.go  genRecordObject.go  genRecordObjectData.go  genRoleBuilder.go  genUtils.go  main.go
utils/: event.h  json_utils.h  mysql_utils.cpp  mysql_utils.h  proto_utils.cpp  proto_utils.h  redis_utils.cpp  redis_utils.h  string_utils.cpp  string_utils.h  timelink.h  url.cpp  url.h  url_utils.cpp  url_utils.h  utility.cpp  utility.h  uuid_utils.cpp  uuid_utils.h
(+16 files in other folders)
